# Zmanim-Documents

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  out.txt  styles_test.css  zmanim_test.html
src/: forecast.cpp  forecast.h  get_hebrew_dates.cpp  get_hebrew_dates.h  get_zmanim.cpp  get_zmanim.h  invalid_date_exception.cpp  invalid_date_exception.h  main.cpp  styles.css  test.html  time_util.cpp  time_util.h  timespan.cpp  timespan.h
src/command/: args_util.cpp  parse_command.cpp  parse_command.h  parse_date.cpp  parse_date.h
src/html/: day.html  day.txt  document.txt  styles.txt  weather_entry.txt  zman.txt
src/html_builders/: day_html.cpp  day_html.h  day_info.h  document_html.cpp  document_html.h  document_info.h  forecast_entry_html.cpp  forecast_entry_html.h  zman_html.cpp  zman_html.h  zman_info.cpp
src/parse/: args.cpp  args.h  parse_command.cpp  parse_date.cpp  parse_date.h  parse_timespan.cpp  parsing_error.cpp
src/web/: forecast.cpp  forecast.h  hebrew_dates.cpp  hebrew_dates.h  zip_codes.cpp  zip_codes.h  zmanim.cpp  zmanim.h
src/zmanim/: day_info.cpp  day_info.h  document_info.cpp  document_info.h  weather_entry_info.cpp  weather_entry_info.h  zman_info.cpp  zman_info.h
